# VistaDream

./: .gitignore  README.md  architecture.md  demo.py  demo_gradio.py  demo_sparse.py  generate_ply.py  new_demo.py  old_pixi.toml  outpaint_gradio.py  pixi.toml  pyproject.toml
.github/: copilot-instructions.md
pipe/: reconstruct.py
tools/DepthPro/: pyproject.toml
tools/DepthPro/src/depth_pro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tools/Fooocus/: args_manager.py
tools/OneFormer/: oneformer_command.py
tools/OneFormer/oneformer/modeling/backbone/: dinat.py
tools/OneFormer/oneformer/modeling/pixel_decoder/ops/MultiScaleDeformableAttention.egg-info/: SOURCES.txt
tools/OneFormer/oneformer/modeling/pixel_decoder/ops/src/: ms_deform_attn.h
vistadream/: misc.py
vistadream/flux/: util.py
vistadream/ops/: connect.py  eval.py  llava.py  utils.py  visual_check.py
vistadream/ops/gs/: basic.py  train.py
vistadream/ops/trajs/: __init__.py  basic.py  check.py  spiral.py
vistadream/pipe/: c2f_recons.py  flux_inpaint.py  lvm_inpaint.py  reconstruct.py  refine_mvdps.py  sparse_recons.py
vistadream/pipe/cfgs/: basic.yaml
