[project]
name = "vistadream"
version = "0.1.0"
description = "VistaDream - 3D Scene Generation"
authors = [{ name = "pablo vela", email = "pablovela5620@gmail.com" }]
requires-python = ">=3.11.0"
readme = "README.md"
dependencies = ["gradio>=5.38.0,<6"]

[tool.setuptools.packages.find]
include = ["vistadream*"]

[tool.pixi.project]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
cuda = "12" # Replace "12" with the specific CUDA version you intend to use

[tool.pixi.tasks]
install-msda = { cmd = "sh make.sh", cwd = "tools/OneFormer/oneformer/modeling/pixel_decoder/ops", description = "Install MSDA operations for OneFormer pixel decoder" }

[tool.pixi.activation]
# required to make gsplat work on CUDA 12.8 | 5090
env = { TORCH_CUDA_ARCH_LIST = "12.0" }

[tool.pixi.dependencies]
python = "3.11.*"
pip = "24.0.*"
cmake = ">=4.0.3,<5"

# CUDA Build Tools
cuda-compiler = "*"
cuda-version = "12.8.*"
cuda-cudart-dev = "*"
cuda-crt = "*"
libcusparse-dev = "*"
cuda-driver-dev = "*"
cuda-nvcc = "*"
cuda-nvrtc-dev = "*"
cuda-nvtx = "*"
cuda-nvtx-dev = "*"
cuda-nvml-dev = "*"
cuda-profiler-api = "*"

# CUDA Libraries
cudnn = "*"
libcublas-dev = "*"
libcudss-dev = "*"
libcufile-dev = "*"
libcufft-dev = "*"
libcurand-dev = "*"
libcusolver-dev = "*"
cusparselt = "*"
libnvjitlink = "*"
# cuda126 end
tyro = ">=0.9.26,<0.10"
beartype = ">=0.21.0,<0.22"

[tool.pixi.pypi-options]
no-build-isolation = ["natten", "detectron2", "gsplat"]

[tool.pixi.pypi-dependencies]
torch = { version = ">=2.7.0", index = "https://download.pytorch.org/whl/cu128" }
torchvision = { version = ">=0.20.1", index = "https://download.pytorch.org/whl/cu128" }
accelerate = "*"
gsplat = { git = "https://github.com/nerfstudio-project/gsplat.git" }
open3d = "*"
tqdm = "*"
omegaconf = "*"
opencv-python = "*"
opencv-contrib-python = "*"
plyfile = "*"
timm = "*"
natten = ">=0.21.0, <0.22"
wandb = "*"
ftfy = "*"
diffdist = "*"
diffusers = "*"
einops = "*"
imageio = "*"
imageio-ffmpeg = "*"
transformers = "*"
torchsde = "*"
huggingface-hub = "*"
roma = "*"
peft = "*"
depth_pro = { path = "tools/DepthPro", editable = true }
detectron2 = { git = "https://github.com/facebookresearch/detectron2.git" }
torchmetrics = ">=1.7.4, <2"
simplecv = { git = "https://github.com/pablovela5620/simplecv.git" }
vistadream = { path = ".", editable = true }

[tool.ruff]
line-length = 150
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

ignore = [
    "E501", # Line too long.
    "F722", # Forward annotation false positive from jaxtyping. Should be caught by pyright.
    "F821", # Forward annotation false positive from jaxtyping. Should be caught by pyright.
]
